<resources>
    <string name="app_name">Game Catalog </string>
    <string name="title_games">Games</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_user">User</string>
    <string name="description_not_informed">Description not informed!</string>
    <string name="release_date_not_informed">Release date not informed!</string>
    <string name="it_is_among_the_favourites">It is among the favourites!</string>
    <string name="it_is_not_among_the_favourites">It is NOT among the favourites!</string>
    <string name="there_has_been_missing">There has been missing!</string>
    <string name="please_fill_in_what_is_missing">Please fill in what is missing!</string>
    <string name="there_was_an_authentication_error_please_try_to_register_again_or_try_to_login">There was an authentication error! Please try to register again or try to login!</string>
    <string name="choose_the_photo_for_the_profile">Choose the photo for the profile!</string>
    <string name="all_must_be_filled_in">All must be filled in!</string>
    <string name="enter_a_valid_email_address">Enter a valid email address!</string>
    <string name="register_another_email_or_go_to_the_login_screen_to_see_if_this_one_is_already_registered">Register another email or go to the login screen to see if this one is already registered!</string>
    <string name="it_s_almost_over">It\'s almost over...</string>
    <string name="put_your_name_here">Put your name here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="please_login_below">Please login below!</string>
    <string name="put_your_email_here">Put your email here</string>
    <string name="put_your_password_here">put your password here</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create_here">Don\'t have an account? Create here!</string>
    <string name="user_name">User name</string>
    <string name="logout">Logout</string>
    <string name="erro">erro</string>
    <string name="loading">Loading...</string>
</resources>