<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDivider8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDivider9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDivider10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDivider11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDivider12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.925" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineDivider13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_ui_card_white" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/background_shadow_purple"
        android:fontFamily="@font/bangers"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/please_login_below"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDivider11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineDivider13" />

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDivider10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineDivider11">

        <EditText
            android:id="@+id/emailEditView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/border"
            android:fontFamily="@font/audiowide"
            android:hint="@string/put_your_email_here"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/passwordEditView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/emailEditView"
            android:layout_alignStart="@id/emailEditView"
            android:layout_alignEnd="@id/emailEditView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:fontFamily="@font/audiowide"
            android:hint="@string/put_your_password_here"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordEditView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/background_ui_card_purple"
            android:fontFamily="@font/bangers"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/accountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/background_shadow_purple"
            android:fontFamily="@font/bangers"
            android:gravity="center"
            android:padding="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/don_t_have_an_account_create_here"
            android:textColor="@color/white"
            android:textSize="22sp" />

    </RelativeLayout>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/relative"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toTopOf="@+id/guidelineDivider12"
        app:layout_constraintEnd_toStartOf="@+id/guidelineDivider8"
        app:layout_constraintStart_toEndOf="@+id/guidelineDivider9"
        app:layout_constraintTop_toBottomOf="@+id/guidelineDivider10"
        app:srcCompat="@drawable/ic_logo"
        tools:ignore="VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>